p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment # Nom du déploiement
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1 # Ce déploiement contient tous les pods mon-app

  template:
    metadata:
      labels:
        app: app1 # Nom du pod

    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service

spec:
  selector:
    app: app1

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  # type: LoadBalancer
  type: ClusterIP
