p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment # Nom du déploiement
spec:
  replicas: 3

  selector:
    matchLabels:
      app: app2 # Ce déploiement contient tous les pods mon-app

  template:
    metadata:
      labels:
        app: app2 # Nom du pod

    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service

spec:
  selector:
    app: app2

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  # type: LoadBalancer
  type: ClusterIP
