p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment # Nom du déploiement
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3 # Ce déploiement contient tous les pods mon-app

  template:
    metadata:
      labels:
        app: app3 # Nom du pod

    spec:
      containers:
        - name: app3
          image: paulbouwer/hello-kubernetes:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service

spec:
  selector:
    app: app3

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  # type: LoadBalancer
  type: ClusterIP
